--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "nodemon": "^1.18.6"
   }
 }
