--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "express-session": "^1.15.6",
     "http-errors": "^1.7.2",
     "mongoose": "^5.3.0",
+    "mongoose-geojson-schema": "^2.1.3",
     "morgan": "~1.9.0",
     "node-gyp": "^3.8.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
